Add Evaluation Buttons

--- a/exercise2/src/index.html
+++ b/exercise2/src/index.html
@@ -27,12 +27,13 @@
             padding: 80px;
             border-radius: 20px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15), 0 10px 12px rgba(0, 0, 0, 0.15);
+            min-width: 600px;
         }
     </style>
 
     <body>
         <div class="container">
-            <test-element instruction="Sehen Sie den roten Kreis?"></test-element>
+            <hue-test id="hue-test" instruction="Wo ist der rote Kreis?"></hue-test>
         </div>
     </body>
 </html>
