Add Results Table Webcomponent

--- a/exercise2/src/index.html
+++ b/exercise2/src/index.html
@@ -35,5 +35,8 @@
         <div class="container">
             <hue-test id="hue-test" instruction="Wo ist der rote Kreis?"></hue-test>
         </div>
+        <div class="container">
+            <results-table id="resultsTable"></results-table>
+        </div>
     </body>
 </html>
