--- a/exercise2/src/index.html
+++ b/exercise2/src/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <hue-test id="hue-test" instruction="Wo ist der rote Kreis?"></hue-test>
         </div>
-        <div class="container">
+        <div class="container" style="display: none">
             <results-table id="resultsTable"></results-table>
         </div>
     </body>
