--- a/exercise2/src/index.html
+++ b/exercise2/src/index.html
@@ -29,13 +29,15 @@
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15), 0 10px 12px rgba(0, 0, 0, 0.15);
             min-width: 600px;
         }
+        .container--table {
+            flex-grow: 1;
+            max-width: 1000px;
+        }
     </style>
 
     <body>
-        <div class="container">
-            <hue-test id="hue-test" instruction="Wo ist der rote Kreis?"></hue-test>
-        </div>
-        <div class="container" style="display: none">
+        <div class="container" id="experimentContainer"></div>
+        <div class="container container--table" style="display: none">
             <results-table id="resultsTable"></results-table>
         </div>
     </body>
