--- a/exercise2/src/index.html
+++ b/exercise2/src/index.html
@@ -13,7 +13,7 @@
         <script src="../node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
         <!-- ! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
 
-        <title>Webcomponents Boilerplate</title>
+        <title>Preattentive Processing</title>
         <script src="index.js"></script>
     </head>
     <style>
