First scatter plot

--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -4,21 +4,12 @@
     <head>
         <meta charset="utf-8" />
 
-        <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-        <script>
-            if (!window.customElements) {
-                document.write("<!--");
-            }
-        </script>
-        <script src="../node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
-        <!-- ! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
-
-        <title>Webcomponents Boilerplate</title>
+        <title>Übung 3</title>
+        <script src="https://d3js.org/d3.v4.js"></script>
         <script src="index.js"></script>
     </head>
 
     <body>
-        YAY
-        <estimation-prompt></estimation-prompt>
+        <div id="scatter-plot"></div>
     </body>
 </html>
