--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -10,6 +10,8 @@
     </head>
 
     <body>
+        <vaadin-combo-box id="combo-y" value="horsepower"></vaadin-combo-box>
         <div id="scatter-plot"></div>
+        <vaadin-combo-box id="combo-x" value="year"></vaadin-combo-box>
     </body>
 </html>
