Start with setting up global selection of origins vs manufacturers

--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -13,5 +13,6 @@
         <vaadin-combo-box id="combo-y" value="horsepower"></vaadin-combo-box>
         <div id="scatter-plot"></div>
         <vaadin-combo-box id="combo-x" value="year"></vaadin-combo-box>
+        <vaadin-combo-box id="combo-global" value="origin"></vaadin-combo-box>
     </body>
 </html>
