Only show checkboxes of selected in global combobox

--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -22,7 +22,7 @@
         <vaadin-combo-box id="combo-y" value="horsepower"></vaadin-combo-box>
         <div id="scatter-plot"></div>
         <vaadin-combo-box id="combo-x" value="year"></vaadin-combo-box>
-        <vaadin-combo-box id="combo-global" value="manufacturer"></vaadin-combo-box>
+        <vaadin-combo-box id="combo-global" value="origin"></vaadin-combo-box>
         <origin-checkboxes id="originCheckboxes"></origin-checkboxes>
         <manufacturer-checkboxes id="manufacturerCheckboxes"></manufacturer-checkboxes>
     </body>
