Add select all checkbox

--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -23,6 +23,7 @@
         <div id="scatter-plot"></div>
         <vaadin-combo-box id="combo-x" value="year"></vaadin-combo-box>
         <vaadin-combo-box id="combo-global" value="origin"></vaadin-combo-box>
+        <vaadin-checkbox id="select-all">Select all</vaadin-checkbox>
         <origin-checkboxes id="originCheckboxes"></origin-checkboxes>
         <manufacturer-checkboxes id="manufacturerCheckboxes"></manufacturer-checkboxes>
     </body>
