Add positioning of combo box on x-axis

--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -21,6 +21,13 @@
     <style>
         body {
             font-family: var(--lumo-font-family);
+            position: relative;
+        }
+        #combo-x {
+            display: block;
+            width: 200px;
+            left: 600px;
+            position: relative;
         }
     </style>
 
