Add showing car info triggered by mouser over events

--- a/exercise3/src/index.html
+++ b/exercise3/src/index.html
@@ -29,6 +29,17 @@
             left: 600px;
             position: relative;
         }
+
+        div.car-info {
+            position: absolute;
+            padding: .5rem;
+            background: #FFFFFF;
+            color: #313639;
+            border: 1px solid #313639;
+            border-radius: 8px;
+            pointer-events: none;
+            font-size: 1.3rem;
+        }
     </style>
 
     <body>
